--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "HomeOS",
-  "name": "HomeOS - Smart Home Dashboard",
+  "short_name": "Home Automation",
+  "name": "Home Automation Dashboard",
   "icons": [
     {
       "src": "favicon.ico",
